:sparkles: add alphabet

--- a/NFA-HIDALGO.ipynb
+++ b/NFA-HIDALGO.ipynb
@@ -5,7 +5,9 @@
    "source": [
     "# Non Deterministic finitic automata: HIDALGO\n",
     "\n",
-    "A program that counts from an input text all words composed by letters in \"HIDALGO\", with a maximum of two A's, one D, and one L, and any number of the other letters. Implemented using the table method.\n",
+    "A program that counts from an input text all words composed by letters in \"HIDALGO\", \n",
+    "with a maximum of two A's, one D, and one L, and any number of the other letters. \n",
+    "Implemented using the table method.\n",
     "\n",
     "The text to be used as an input is \"El Quijote\", which is provided."
    ],
@@ -15,19 +17,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "10\n"
+      "3\n"
      ],
      "output_type": "stream"
     }
    ],
    "source": [
-    "a = 10\n",
-    "print(a)"
+    "from enum import Enum\n",
+    "\n",
+    "class Alphabet(Enum):\n",
+    "    H=1\n",
+    "    I=2\n",
+    "    D=3\n",
+    "    A=4\n",
+    "    L=5\n",
+    "    G=6\n",
+    "    O=7\n",
+    "    \n",
+    "    \n",
+    "al = [1,3,5]\n",
+    "print(al[Alphabet['H'].value])\n"
    ],
    "metadata": {
     "collapsed": false,
